# DemonX-Nuker

./: BUILD_INSTRUCTIONS.md  Cargo.toml  DemonX.spec  QUICK_FIXES.md  README.md  TERMUX_GUIDE.md  TERMUX_QUICK_START.md  TERMUX_TECHNICAL_ANALYSIS.md  UI_DESIGN_ANALYSIS.md  build.bat  build_exe.py  build_rust.py  build_spec.py  config.json  demonx_complete.py  demonx_gui.py  demonx_rust_bridge.py  operation_history.json  proxies.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run_gui.bat  setup_termux.sh  statistics.json  statistics.json.backup
demonx/: __init__.py  config.py  history.py  operation_queue.py  presets.py  proxy_manager.py  rate_limiter.py  ui_enhancer.py  utils.py
demonx/core/: __init__.py  exceptions.py
demonx/operations/: __init__.py  base.py  factory.py
src/: discord_client.rs  lib.rs  proxy_manager.rs  python.rs  rate_limiter.rs
tests/: README.md  __init__.py  conftest.py  test_batch_processing.py  test_config.py  test_demonx_complete.py  test_error_handling.py  test_gui.py  test_operation_history.py  test_preset_manager.py  test_proxy_manager.py  test_rate_limiter.py  test_utils.py  test_validation.py
