[package]
name = "demonx-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "demonx_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Twilight Discord
twilight-http = { version = "0.19", features = ["native", "rustls-tls"] }
twilight-model = "0.19"
twilight-gateway = { version = "0.19", features = ["native", "rustls-tls"] }
twilight-util = "0.19"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client with proxy support
reqwest = { version = "0.11", features = ["native-tls", "json"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Rate limiting
dashmap = "5.5"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.20", features = ["auto-initialize", "extension-module"] }

# Time handling
chrono = "0.4"

# URL parsing
url = "2.5"

# Random number generation
rand = "0.8"

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

